net-policy/backend-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    nslabel: ns-backend-app
  name: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    deploylabel: dep-backend-app  # Change label for Deployment
  name: dep-backend-app
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      podlabel: backend-app  # Match label for pods managed by Deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        podlabel: backend-app  # Change label for pods managed by Deployment
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    svclabel: svc-backend-app # Change label for Service
  name: svc-backend-app
  namespace: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    podlabel: backend-app  # Match label for pods targeted by Service
  type: ClusterIP
